--- a/crodeon/api-credentials.html
+++ b/crodeon/api-credentials.html
@@ -1,5 +1,5 @@
 <script type="text/javascript">
-    RED.nodes.registerType('api-credentials',{
+    RED.nodes.registerType('crodeon-api-credentials',{
         category: 'config',
         defaults: {
             name: {
@@ -30,7 +30,7 @@
     });
 </script>
 
-<script type="text/html" data-template-name="api-credentials">
+<script type="text/html" data-template-name="crodeon-api-credentials">
     <div class="form-row">
         <label for="node-config-input-name"><i class="fa fa-tag"></i> Name</label>
         <input type="text" id="node-config-input-name" placeholder="Name">
