--- a/crodeon/locales/en-US/relais-reader.html
+++ b/crodeon/locales/en-US/relais-reader.html
@@ -1,4 +1,4 @@
-<script type="text/markdown" data-help-name="sensor">
+<script type="text/markdown" data-help-name="crodeon-relais-reader">
 Read the value of the selected relais output.
 
 ### Inputs
