--- a/crodeon/locales/en-US/relais-writer.html
+++ b/crodeon/locales/en-US/relais-writer.html
@@ -1,4 +1,4 @@
-<script type="text/markdown" data-help-name="sensor">
+<script type="text/markdown" data-help-name="crodeon-relais-writer">
 Writes the value of `msg.payload` to the selected relais output.
 
 ### Inputs
