--- a/crodeon/relais-writer.html
+++ b/crodeon/relais-writer.html
@@ -11,13 +11,13 @@
         return options;
     }
 
-    RED.nodes.registerType('relais-writer', {
+    RED.nodes.registerType('crodeon-relais-writer', {
         category: 'crodeon',
         color: '#C0C0C0',
         defaults: {
             api_credentials: {
                 value: '',
-                type: 'api-credentials',
+                type: 'crodeon-api-credentials',
                 required: true
             },
             reporter: {
@@ -31,7 +31,7 @@
             }
         },
         inputs: 1,
-        outputs: 1,
+        outputs: 0,
         icon: "font-awesome/fa-rocket",
         label: function() {
             if(this.relaisOutput != '') {
@@ -60,7 +60,7 @@
             });
 
             RED.events.on('nodes:add', function(node) {
-                if(node.type === 'reporter') {       
+                if(node.type === 'crodeon-reporter') {       
                     setTimeout(function() {
                         $("#node-input-relaisOutput").typedInput('types', [{
                             value: "relaisOutput",
@@ -71,7 +71,7 @@
             });
 
             RED.events.on('nodes:change', function(node) {
-                if(node.type === 'reporter') {   
+                if(node.type === 'crodeon-reporter') {   
                     setTimeout(function() {
                         $("#node-input-relaisOutput").typedInput('types', [{
                             value: "relaisOutput",
@@ -82,7 +82,7 @@
             });
 
             RED.events.on('nodes:remove', function(node) {
-                if(node.type === 'reporter') {   
+                if(node.type === 'crodeon-reporter') {   
                     setTimeout(function() {
                         $("#node-input-relaisOutput").typedInput('types', [{
                             value: "relaisOutput",
@@ -97,7 +97,7 @@
 })();
 </script>
 
-<script type="text/html" data-template-name="relais-writer">
+<script type="text/html" data-template-name="crodeon-relais-writer">
     <div class="form-row">
         <label for="node-input-api_credentials"><i class="fa fa-shield"></i> <span data-i18n="relaisWriter.labels.api_login"></span></label>
         <input type="text" id="node-input-api_credentials">
