--- a/crodeon/reporter.html
+++ b/crodeon/reporter.html
@@ -1,5 +1,5 @@
 <script type="text/javascript">
-    RED.nodes.registerType('reporter',{
+    RED.nodes.registerType('crodeon-reporter',{
         category: 'config',
         defaults: {
             name: {
@@ -120,7 +120,7 @@
     });
 </script>
 
-<script type="text/html" data-template-name="reporter">
+<script type="text/html" data-template-name="crodeon-reporter">
     <div class="form-row">
         <label for="node-config-input-name"><i class="fa fa-tag"></i> Name</label>
         <input type="text" id="node-config-input-name" placeholder="Name">
